Fixed some messages. Finished README.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ documentation/~$611_81642_Documentation.docx
 
 
 documentation/81611_81642_Documentation.docx
+storage/*
+documentation/~WRL0003.tmp
